2002-12-31  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: add docs on pbuildd.

	* pbuildd/Makefile (install): add /var/cache/pbuilder/pbuildd dir

2002-12-30  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install pbuildd files as well.

	* pbuildd/buildd.sh: modified for pbuilder.

	* pbuildd/buildd-config.sh (HOOKDIR): modified for pbuilder.

2002-12-28  Junichi Uekawa  <dancer@debian.org>

	* Documentation/Makefile (all): documentation makefile.

	* Documentation/pbuilder-doc.xml: start to create documentation.

2002-12-23  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-satisfydepends: add note of which versions to try in pdebuild.

2002-12-18  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: try to use COW device.
	I had a typo, fix it.

	* pbuilder-user-mode-linux.1: document

2002-12-16  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update.

	* pdebuild.1: More vigorously document pdebuild option, which changed.
	From: Jose Carlos Garcia Sogo <jsogo@debian.org>.

2002-12-15  Junichi Uekawa  <dancer@debian.org>

	* THANKS: update this file, thinking that this file is probably autogenerated from
	ChangeLog on other projects...

	* pbuilder-modules (pbuilder-options): modify the ordering of scripts so that 
	concurrent-build experience is more active.
	(pbuilder-options): extraction does not need the locking, does it?
	I can ignore the locks while extracting. Creating the tarball needs to 
	lock the file. mv will not replace inodes, and running extraction routines
	will not be affected by it.
	Therefore I am removing the locking completely from extraction routines.
	At request of Sam Couter <sam@couter.dropbear.id.au> 

2002-12-13  Junichi Uekawa  <dancer@debian.org>

	* examples/D10tmp: fix error in script.

	* examples/C10shell: example of shell invocation.

	* Makefile (install): install dpkg-i example.

	* examples/B91dpkg-i: add new file to demonstrate using script to
	automatically install packages.
