@@ -38,4 +38,5 @@ install:
 	$(INSTALL_EXECUTABLE) examples/C10shell $(DESTDIR)/usr/share/doc/pbuilder/examples
 	$(INSTALL_EXECUTABLE) examples/D10tmp $(DESTDIR)/usr/share/doc/pbuilder/examples
 	cd pbuildd; make install DESTDIR=$(DESTDIR)
+	cd Documentation; make install DESTDIR=$(DESTDIR)
 
