@@ -1,5 +1,14 @@
 2002-12-31  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/Makefile (install): add install method.
+
+	* Makefile (install): add install method for docs.
+
+	* Documentation/pbuilder-doc.xml: history of pbuilder moved to here.
+
+	* AUTHORS: history and background of pbuilder is moved over and 
+	remove from here.
+
 	* Documentation/pbuilder-doc.xml: add docs on pbuildd.
 
 	* pbuildd/Makefile (install): add /var/cache/pbuilder/pbuildd dir
